ctowasm/test/samples/error/initializer/global/initialize_fn_type.c
// Attempt to intialize function as variable
int f() = {};
int main() {

}